"Ketika menambahkan gaji pokok baru, pengguna dapat memilih: Departemen, posisi, Penamaan level sebaiknya di generate otomatis oleh sistem dengan format L-00 (sequence number), Tanggal Efektif"