@@ -8,6 +8,7 @@ import com.fusi24.pangreksa.web.model.entity.*;
 import com.fusi24.pangreksa.web.service.CommonService;
 import com.fusi24.pangreksa.web.service.CompanyService;
 import com.fusi24.pangreksa.web.service.PayrollService;
+import com.fusi24.pangreksa.web.service.SalaryBaseLevelService;
 import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.UI;
 import com.vaadin.flow.component.button.Button;
@@ -52,14 +53,16 @@ import java.util.Locale;
 @PageTitle("Komponen Gaji")
 @Menu(order = 23, icon = "vaadin:clipboard-check", title = "Komponen Gaji")
 @RolesAllowed("KOMP_GAJI")
-//@PermitAll // When security is enabled, allow all authenticated users
 public class KomponenGajiView extends Main {
     private static final long serialVersionUID = 23L;
     private static final Logger log = LoggerFactory.getLogger(KomponenGajiView.class);
+
     private final CurrentUser currentUser;
     private final CommonService commonService;
-    private PayrollService payrollService;
-    private CompanyService companyService;
+    private final PayrollService payrollService;
+    private final CompanyService companyService;
+    private final SalaryBaseLevelService salaryBaseLevelService;
+
     private Authorization auth;
     private FwAppUser currentAppUser;
 
@@ -73,13 +76,14 @@ public class KomponenGajiView extends Main {
     Button sblAddButton;
     Button sblSaveButton;
     Grid<HrSalaryBaseLevel> salaryBaseLevelGrid;
-    boolean isBasicSalaryEdit = false;
+
     // Allowance
     Checkbox withInactiveAllowance;
     Button saAddButton;
     Button saSaveButton;
     Grid<HrSalaryAllowance> salaryAllowanceGrid;
     boolean isAllowanceEdit = false;
+
     // Allowance Package
     Checkbox withInactivePositionAllowance;
     Grid<HrOrgStructure> orgStructureGrid;
@@ -95,13 +99,17 @@ public class KomponenGajiView extends Main {
     Button paAddButton;
     Button paSaveButton;
 
+    public KomponenGajiView(CurrentUser currentUser,
+                            CommonService commonService,
+                            PayrollService payrollService,
+                            CompanyService companyService,
+                            SalaryBaseLevelService salaryBaseLevelService) {
 
-    public KomponenGajiView(CurrentUser currentUser, CommonService commonService,
-                            PayrollService payrollService, CompanyService companyService) {
         this.currentUser = currentUser;
         this.commonService = commonService;
         this.payrollService = payrollService;
         this.companyService = companyService;
+        this.salaryBaseLevelService = salaryBaseLevelService;
 
         this.payrollService.setUser(currentUser.require());
 
@@ -119,7 +127,6 @@ public class KomponenGajiView extends Main {
 
         add(new ViewToolbar(VIEW_NAME));
         createBody();
-
         setListener();
         setAuthorization();
     }
@@ -153,7 +160,6 @@ public class KomponenGajiView extends Main {
         this.body = new VerticalLayout();
         body.setPadding(false);
         body.setSpacing(false);
-
         body.setHeightFull();
 
         withInactiveBasicSalary = new Checkbox(true);
@@ -180,15 +186,13 @@ public class KomponenGajiView extends Main {
         add(body);
     }
 
-    /*
-
-    CREATE COMPONENT
-
-     */
+    /* =========================
+       CREATE COMPONENT
+       ========================= */
 
     private Component createSalaryBaseLevelFunction(){
         sblAddButton = new Button("Add");
-        sblSaveButton = new Button("Save");
+        sblSaveButton = new Button("Refresh");
 
         HorizontalLayout leftLayout = new HorizontalLayout();
         leftLayout.setSpacing(true);
@@ -200,120 +204,68 @@ public class KomponenGajiView extends Main {
         functionMenuLayout.add(leftLayout);
         functionMenuLayout.add(sblSaveButton, sblAddButton);
         functionMenuLayout.setAlignItems(HorizontalLayout.Alignment.BASELINE);
-        functionMenuLayout.expand(leftLayout); // leftLayout takes all available space, addButton stays right
-
+        functionMenuLayout.expand(leftLayout);
 
         this.salaryBaseLevelGrid = new Grid<>(HrSalaryBaseLevel.class, false);
         salaryBaseLevelGrid.addClassNames("salary-base-level-grid");
         salaryBaseLevelGrid.setWidthFull();
         salaryBaseLevelGrid.setHeight("300px");
 
-        // Editable Level Code
+        salaryBaseLevelGrid.addColumn(item ->
+                item.getCompany() != null ? item.getCompany().getName() : ""
+        ).setHeader("Company").setAutoWidth(true);
+
+
+
+        salaryBaseLevelGrid.addColumn(HrSalaryBaseLevel::getLevelCode)
+                .setHeader("Level Code").setAutoWidth(true);
+
+        salaryBaseLevelGrid.addColumn(item ->
+                        item.getBaseSalary() == null ? "" : decimalAmountFormater(item.getBaseSalary()))
+                .setHeader("Amount").setAutoWidth(true)
+                .setTextAlign(ColumnTextAlign.END);
+
+        salaryBaseLevelGrid.addColumn(item ->
+                        item.getStartDate() == null ? "" : item.getStartDate().toString())
+                .setHeader("Start Date").setAutoWidth(true);
+
+        salaryBaseLevelGrid.addColumn(item ->
+                        item.getEndDate() == null ? "" : item.getEndDate().toString())
+                .setHeader("End Date").setAutoWidth(true);
+
+        salaryBaseLevelGrid.addColumn(item ->
+                        item.getReason() == null ? "" : item.getReason())
+                .setHeader("Reason").setAutoWidth(true);
+
+        // ✅ ACTION COLUMN DI TEMPAT YANG BENAR
         salaryBaseLevelGrid.addColumn(new ComponentRenderer<>(item -> {
-            TextField levelCodeField = new TextField();
-            levelCodeField.setWidthFull();
-            levelCodeField.setValue(item.getLevelCode() != null ? item.getLevelCode() : "");
-            levelCodeField.addValueChangeListener(e -> {
-                item.setLevelCode(e.getValue());
-                this.isBasicSalaryEdit = true;
+            HorizontalLayout actions = new HorizontalLayout();
+
+            Button editBtn = new Button("Edit", ev -> {
+                SalaryBaseLevelDialog dialog = new SalaryBaseLevelDialog(
+                        salaryBaseLevelService,
+                        currentAppUser.getCompany(),
+                        currentAppUser,
+                        item,
+                        () -> populateSalaryBaseLevelGrid(withInactiveBasicSalary.getValue())
+                );
+                dialog.open();
             });
-            return levelCodeField;
-        })).setHeader("Level Code").setWidth("50px");
 
-        // Inside your grid setup:
-        salaryBaseLevelGrid.addColumn(new ComponentRenderer<>(item -> {
-            TextField salaryField = new TextField();
-            salaryField.setWidthFull();
-            salaryField.setValueChangeMode(ValueChangeMode.ON_BLUR);
-
-            salaryField.addThemeVariants(TextFieldVariant.LUMO_ALIGN_RIGHT);
-            salaryField.setAllowedCharPattern("[0-9]");
-            // Prefix Rp
-            salaryField.setPrefixComponent(new Span("Rp "));
-
-            // Initial value
-            if (item.getBaseSalary() != null) {
-                salaryField.setValue(decimalAmountFormater(item.getBaseSalary()));
-            }
-
-            // Listener for user input
-            salaryField.addValueChangeListener(e -> {
-                String value = e.getValue().replace(".", "").replace(",", ".");
-                try {
-                    BigDecimal parsed = new BigDecimal(value);
-                    item.setBaseSalary(parsed);
-                    this.isBasicSalaryEdit = true;
-                    // Re-format to show separators again
-                    salaryField.setValue(decimalAmountFormater(parsed));
-                } catch (NumberFormatException ex) {
-                    // If invalid, reset
-                    if (item.getBaseSalary() != null) {
-                        salaryField.setValue(decimalAmountFormater(item.getBaseSalary()));
-                    } else {
-                        salaryField.clear();
-                    }
+            Button deleteBtn = new Button("Delete", ev -> {
+                if (!auth.canDelete) return;
+                if (item.getId() != null) {
+                    salaryBaseLevelService.delete(item);
+                    populateSalaryBaseLevelGrid(withInactiveBasicSalary.getValue());
                 }
             });
 
-            return salaryField;
-        })).setHeader("Amount").setAutoWidth(true).setTextAlign(ColumnTextAlign.END);
-        // Editable Start Date
-        salaryBaseLevelGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px"); // small gap
-            layout.setWidthFull();
+            editBtn.setEnabled(auth.canEdit);
+            deleteBtn.setEnabled(auth.canDelete);
 
-            DatePicker startDate = new DatePicker();
-            // Custom format: DD-MMM-YYYY
-            startDate.setI18n(DatePickerUtil.getIndonesianI18n());
-            startDate.setWidthFull();
-            startDate.setValue(item.getStartDate());
-            startDate.addValueChangeListener(e -> {
-                item.setStartDate(e.getValue());
-                this.isBasicSalaryEdit = true;
-            });
-
-            layout.add(startDate);
-            return layout;
-        })).setHeader("Start Date").setWidth("75px");
-
-        // Editable End Date
-        salaryBaseLevelGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px");
-            layout.setWidthFull();
-
-            DatePicker endDate = new DatePicker();
-            endDate.setI18n(DatePickerUtil.getIndonesianI18n());
-            endDate.setWidthFull();
-            endDate.setValue(item.getEndDate());
-            endDate.addValueChangeListener(e -> {
-                item.setEndDate(e.getValue());
-                this.isBasicSalaryEdit = true;
-            });
-
-            layout.add(endDate);
-            return layout;
-        })).setHeader("End Date").setWidth("75px");
-
-        // Delete button
-        salaryBaseLevelGrid.addColumn(new ComponentRenderer<>(item -> {
-            Button deleteButton = new Button(VaadinIcon.CLOSE.create());
-            deleteButton.addClickListener(e -> {
-                if (this.auth.canDelete) {
-                    salaryBaseLevelGrid.getListDataView().removeItem(item);
-                }
-            });
-
-            deleteButton.setEnabled(this.auth.canDelete);
-
-            if(item.getId() == null)
-                return deleteButton;
-            else
-                return null;
-        })).setHeader("Actions").setFlexGrow(0).setAutoWidth(true);
+            actions.add(editBtn, deleteBtn);
+            return actions;
+        })).setHeader("Action").setFlexGrow(0).setAutoWidth(true);
 
         VerticalLayout salaryBaseLevelLayout = new VerticalLayout(functionMenuLayout, salaryBaseLevelGrid);
         salaryBaseLevelLayout.setSpacing(false);
@@ -337,26 +289,24 @@ public class KomponenGajiView extends Main {
         functionMenuLayout.add(leftLayout);
         functionMenuLayout.add(saSaveButton, saAddButton);
         functionMenuLayout.setAlignItems(HorizontalLayout.Alignment.BASELINE);
-        functionMenuLayout.expand(leftLayout); // leftLayout takes all available space, addButton stays right
+        functionMenuLayout.expand(leftLayout);
 
         this.salaryAllowanceGrid = new Grid<>(HrSalaryAllowance.class, false);
         salaryAllowanceGrid.addClassNames("salary-base-level-grid");
         salaryAllowanceGrid.setWidthFull();
         salaryAllowanceGrid.setHeight("300px");
 
-        // Allowance Name (editable)
         salaryAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
-            TextField levelCodeField = new TextField();
-            levelCodeField.setWidthFull();
-            levelCodeField.setValue(item.getName() != null ? item.getName() : "");
-            levelCodeField.addValueChangeListener(e -> {
+            TextField nameField = new TextField();
+            nameField.setWidthFull();
+            nameField.setValue(item.getName() != null ? item.getName() : "");
+            nameField.addValueChangeListener(e -> {
                 item.setName(e.getValue());
                 this.isAllowanceEdit = true;
             });
-            return levelCodeField;
-        })).setHeader("Allowance Name").setWidth("50px");
+            return nameField;
+        })).setHeader("Allowance Name");
 
-        // Amount (editable + formatter)
         salaryAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
             TextField salaryField = new TextField();
             salaryField.setWidthFull();
@@ -384,13 +334,7 @@ public class KomponenGajiView extends Main {
             return salaryField;
         })).setHeader("Amount").setAutoWidth(true).setTextAlign(ColumnTextAlign.END);
 
-        // Start Date (editable)
         salaryAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px");
-            layout.setWidthFull();
-
             DatePicker startDate = new DatePicker();
             startDate.setI18n(DatePickerUtil.getIndonesianI18n());
             startDate.setWidthFull();
@@ -399,18 +343,10 @@ public class KomponenGajiView extends Main {
                 item.setStartDate(e.getValue());
                 this.isAllowanceEdit = true;
             });
+            return startDate;
+        })).setHeader("Start Date").setWidth("130px");
 
-            layout.add(startDate);
-            return layout;
-        })).setHeader("Start Date").setWidth("75px");
-
-        // End Date (editable)
         salaryAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px");
-            layout.setWidthFull();
-
             DatePicker endDate = new DatePicker();
             endDate.setI18n(DatePickerUtil.getIndonesianI18n());
             endDate.setWidthFull();
@@ -419,12 +355,9 @@ public class KomponenGajiView extends Main {
                 item.setEndDate(e.getValue());
                 this.isAllowanceEdit = true;
             });
+            return endDate;
+        })).setHeader("End Date").setWidth("130px");
 
-            layout.add(endDate);
-            return layout;
-        })).setHeader("End Date").setWidth("75px");
-
-        // DELETE dengan konfirmasi + hapus ke DB bila sudah tersimpan
         salaryAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
             Button deleteButton = new Button(VaadinIcon.TRASH.create());
             deleteButton.setEnabled(this.auth.canDelete);
@@ -433,16 +366,15 @@ public class KomponenGajiView extends Main {
 
                 Dialog confirm = new Dialog();
                 confirm.setHeaderTitle("Delete allowance?");
-                Span msg = new Span("Are you sure you want to delete \"" + (item.getName() != null ? item.getName() : "(no name)") + "\"?");
+                Span msg = new Span("Are you sure you want to delete \"" +
+                        (item.getName() != null ? item.getName() : "(no name)") + "\"?");
                 confirm.add(new VerticalLayout(msg));
 
                 Button cancel = new Button("Cancel", ev -> confirm.close());
                 Button yes = new Button("Delete", ev -> {
                     if (item.getId() != null) {
-                        // HAPUS DI DB
                         payrollService.deleteSalaryAllowance(item);
                     }
-                    // HAPUS DI GRID
                     salaryAllowanceGrid.getListDataView().removeItem(item);
                     Notification.show("Allowance deleted");
                     confirm.close();
@@ -453,33 +385,6 @@ public class KomponenGajiView extends Main {
             return deleteButton;
         })).setHeader("Actions").setFlexGrow(0).setAutoWidth(true);
 
-        // ADD
-//        saAddButton.addClickListener(e -> {
-//            HrSalaryAllowance newAllowance = new HrSalaryAllowance();
-//            newAllowance.setName("NEW ALLOWANCE");
-//            newAllowance.setAmount(BigDecimal.ZERO);
-//            newAllowance.setStartDate(LocalDate.now());
-//            salaryAllowanceGrid.getListDataView().addItem(newAllowance);
-//            this.isAllowanceEdit = true;
-//        });
-
-        // SAVE (Update semua perubahan baris)
-//        saSaveButton.addClickListener(e -> {
-//            if (this.auth.canEdit && this.isAllowanceEdit) {
-//                List<HrSalaryAllowance> items = salaryAllowanceGrid.getListDataView().getItems().toList();
-//                for (HrSalaryAllowance it : items) {
-//                    payrollService.saveSalaryAllowance(it, currentUser.require());
-//                }
-//                populateAllowanceGrid(withInactiveAllowance.getValue());
-//                this.isAllowanceEdit = false;
-//                Notification.show("Data Allowance Saved Successfully");
-//            }
-//        });
-//
-//        withInactiveAllowance.addValueChangeListener(e -> {
-//            populateAllowanceGrid(e.getValue());
-//        });
-
         VerticalLayout salaryAlowanceLayout = new VerticalLayout(functionMenuLayout, salaryAllowanceGrid);
         salaryAlowanceLayout.setSpacing(false);
         salaryAlowanceLayout.setPadding(false);
@@ -488,19 +393,16 @@ public class KomponenGajiView extends Main {
         return salaryAlowanceLayout;
     }
 
-
     private Component createAllowancePackageFunction(){
         HorizontalLayout leftLayout = new HorizontalLayout();
         leftLayout.setSpacing(true);
-//        leftLayout.add(withInactiveAllowance);
         leftLayout.setAlignItems(FlexComponent.Alignment.BASELINE);
 
         HorizontalLayout functionMenuLayout = new HorizontalLayout();
         functionMenuLayout.setWidthFull();
         functionMenuLayout.add(leftLayout);
-//        functionMenuLayout.add(saSaveButton, saAddButton);
         functionMenuLayout.setAlignItems(HorizontalLayout.Alignment.BASELINE);
-        functionMenuLayout.expand(leftLayout); // leftLayout takes all available space, addButton stays right
+        functionMenuLayout.expand(leftLayout);
 
         String WIDTH_ = "250px";
 
@@ -509,7 +411,6 @@ public class KomponenGajiView extends Main {
         orgStructureGrid.setWidth(WIDTH_);
         orgStructureGrid.setHeightFull();
         orgStructureGrid.setSelectionMode(Grid.SelectionMode.SINGLE);
-        // add columns
         orgStructureGrid.addColumn(HrOrgStructure::getName).setHeader("Organization");
 
         positionGrid = new Grid<>(HrPosition.class, false);
@@ -517,7 +418,6 @@ public class KomponenGajiView extends Main {
         positionGrid.setWidth(WIDTH_);
         positionGrid.setHeightFull();
         positionGrid.setSelectionMode(Grid.SelectionMode.SINGLE);
-        // add columns
         positionGrid.addColumn(HrPosition::getName).setHeader("Position");
 
         HorizontalLayout horizontalbodyLayout = new HorizontalLayout(
@@ -541,12 +441,15 @@ public class KomponenGajiView extends Main {
         companyTF = new TextField();
         companyTF.setWidthFull();
         companyTF.setReadOnly(true);
+
         organizationTF = new TextField();
         organizationTF.setWidthFull();
         organizationTF.setReadOnly(true);
+
         positionTF = new TextField();
         positionTF.setWidthFull();
         positionTF.setReadOnly(true);
+
         totalallowanceTF = new TextField();
         totalallowanceTF.setWidthFull();
         totalallowanceTF.setReadOnly(true);
@@ -554,14 +457,15 @@ public class KomponenGajiView extends Main {
         calcullationDateTF = new DatePicker();
         calcullationDateTF.setI18n(DatePickerUtil.getIndonesianI18n());
         calcullationDateTF.setValue(LocalDate.now());
-        calcullationDateTF.setTooltipText("is the specific date used as a reference point to perform a calculation. It determines the effective point in time for applying formulas, rules, or computations.");
+        calcullationDateTF.setTooltipText(
+                "is the specific date used as a reference point to perform a calculation. " +
+                        "It determines the effective point in time for applying formulas, rules, or computations."
+        );
 
         totalallowanceTF.addThemeVariants(TextFieldVariant.LUMO_ALIGN_RIGHT);
         totalallowanceTF.setAllowedCharPattern("[0-9]");
-        // Prefix Rp
         totalallowanceTF.setPrefixComponent(new Span("Rp "));
         totalallowanceTF.setValue(decimalAmountFormater(BigDecimal.ZERO));
-
 
         paSaveButton = new Button("Save");
         paAddButton = new Button("Add");
@@ -569,14 +473,10 @@ public class KomponenGajiView extends Main {
         populateAvailableAllowanceList();
 
         FormLayout formLayout = new FormLayout();
-        formLayout.setWidth("500px"); // optional, set desired width
-        // Force 1 column always
+        formLayout.setWidth("500px");
         formLayout.setResponsiveSteps(
                 new FormLayout.ResponsiveStep("0", 1, FormLayout.ResponsiveStep.LabelsPosition.ASIDE)
         );
-
-        // --- Section 1: Packages for ---
-        //formLayout.add(new Span("Packages for"));
 
         formLayout.addFormItem(companyTF, "Company");
         formLayout.addFormItem(organizationTF, "Organization");
@@ -585,8 +485,6 @@ public class KomponenGajiView extends Main {
         formLayout.addFormItem(totalallowanceTF, "Total Allowance");
 
         companyTF.setValue(currentAppUser.getCompany().getName());
-
-        // Create Menu Layout
 
         HorizontalLayout leftLayout = new HorizontalLayout();
         leftLayout.setSpacing(true);
@@ -598,44 +496,31 @@ public class KomponenGajiView extends Main {
         functionMenuLayout.add(leftLayout);
         functionMenuLayout.add(paSaveButton, paAddButton);
         functionMenuLayout.setAlignItems(HorizontalLayout.Alignment.BASELINE);
-        functionMenuLayout.expand(leftLayout); // leftLayout takes all available space, addButton stays right
-
-        // Create Grid
+        functionMenuLayout.expand(leftLayout);
 
         positionAllowanceGrid = new Grid<>(HrSalaryPositionAllowance.class, false);
         positionAllowanceGrid.addClassNames("position-allowance-grid");
         positionAllowanceGrid.setWidthFull();
         positionAllowanceGrid.setHeight("200px");
         positionAllowanceGrid.setSelectionMode(Grid.SelectionMode.NONE);
-        // add columns
+
         positionAllowanceGrid.addColumn(pa -> pa.getAllowance().getName()).setHeader("Allowance");
-        // Inside your grid setup:
+
         positionAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
             TextField amountField = new TextField();
             amountField.setWidthFull();
             amountField.setReadOnly(true);
-
             amountField.addThemeVariants(TextFieldVariant.LUMO_ALIGN_RIGHT);
             amountField.setAllowedCharPattern("[0-9]");
-            // Prefix Rp
             amountField.setPrefixComponent(new Span("Rp "));
-
-            // Initial value
-            if (item.getAllowance().getId() != null) {
-                amountField.setValue( decimalAmountFormater(item.getAllowance().getAmount()) );
+            if (item.getAllowance() != null && item.getAllowance().getAmount() != null) {
+                amountField.setValue(decimalAmountFormater(item.getAllowance().getAmount()));
             }
-
             return amountField;
         })).setHeader("Amount").setAutoWidth(true).setTextAlign(ColumnTextAlign.END);
-        // Editable Start Date
-        positionAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px"); // small gap
-            layout.setWidthFull();
 
+        positionAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
             DatePicker startDate = new DatePicker();
-            // Custom format: DD-MMM-YYYY
             startDate.setI18n(DatePickerUtil.getIndonesianI18n());
             startDate.setWidthFull();
             startDate.setValue(item.getStartDate());
@@ -643,17 +528,10 @@ public class KomponenGajiView extends Main {
                 item.setStartDate(e.getValue());
                 this.isPositionallowanceEdit = true;
             });
+            return startDate;
+        })).setHeader("Start Date").setWidth("130px");
 
-            layout.add(startDate);
-            return layout;
-        })).setHeader("Start Date").setWidth("75px");
-        // Editable End Date
         positionAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
-            HorizontalLayout layout = new HorizontalLayout();
-            layout.setSpacing(false);
-            layout.getStyle().set("gap", "5px");
-            layout.setWidthFull();
-
             DatePicker endDate = new DatePicker();
             endDate.setI18n(DatePickerUtil.getIndonesianI18n());
             endDate.setWidthFull();
@@ -661,14 +539,11 @@ public class KomponenGajiView extends Main {
             endDate.addValueChangeListener(e -> {
                 item.setEndDate(e.getValue());
                 this.isPositionallowanceEdit = true;
-
                 calculateTotalAllowance();
             });
+            return endDate;
+        })).setHeader("End Date").setWidth("130px");
 
-            layout.add(endDate);
-            return layout;
-        })).setHeader("End Date").setWidth("75px");
-        // Delete button
         positionAllowanceGrid.addColumn(new ComponentRenderer<>(item -> {
             Button deleteButton = new Button(VaadinIcon.CLOSE.create());
             deleteButton.addClickListener(e -> {
@@ -677,135 +552,128 @@ public class KomponenGajiView extends Main {
                     calculateTotalAllowance();
                 }
             });
-
             deleteButton.setEnabled(this.auth.canDelete);
-
-            if(item.getId() == null)
-                return deleteButton;
-            else
-                return null;
+            return item.getId() == null ? deleteButton : null;
         })).setHeader("Actions").setFlexGrow(0).setAutoWidth(true);
 
-        VerticalLayout vLayout = new VerticalLayout(formLayout, functionMenuLayout,     positionAllowanceGrid);
+        VerticalLayout vLayout = new VerticalLayout(formLayout, functionMenuLayout, positionAllowanceGrid);
         vLayout.setWidth("100%");
         vLayout.setHeightFull();
 
         return vLayout;
     }
 
-    /*
+    /* =========================
+       POPULATE GRID
+       ========================= */
 
-    POPULATE GRID
-
-     */
-
-    private  void populateSalaryBaseLevelGrid(boolean includeInactive){
+    private void populateSalaryBaseLevelGrid(boolean includeInactive){
         if(this.auth.canView) {
-            List<HrSalaryBaseLevel> salaryBaseLevelList = payrollService.getAllSalaryBaseLevels(includeInactive);
+            List<HrSalaryBaseLevel> salaryBaseLevelList =
+                    payrollService.getAllSalaryBaseLevels(includeInactive);
             salaryBaseLevelGrid.setItems(salaryBaseLevelList);
         }
     }
 
-    private  void populateAllowanceGrid(boolean includeInactive){
+    private void populateAllowanceGrid(boolean includeInactive){
         if(this.auth.canView) {
-            List<HrSalaryAllowance> salaryallowanceList = payrollService.getAllSalaryAllowances(includeInactive);
+            List<HrSalaryAllowance> salaryallowanceList =
+                    payrollService.getAllSalaryAllowances(includeInactive);
             salaryAllowanceGrid.setItems(salaryallowanceList);
         }
     }
 
     private void populateOrgStructureGrid(){
         if(this.auth.canView) {
-            List<HrOrgStructure> orgStructureList = companyService.getAllOrgStructuresInCompany(this.currentAppUser.getCompany());
+            List<HrOrgStructure> orgStructureList =
+                    companyService.getAllOrgStructuresInCompany(this.currentAppUser.getCompany());
             orgStructureGrid.setItems(orgStructureList);
         }
     }
 
     private void populatePositionGrid(HrOrgStructure orgStructure){
         if(this.auth.canView) {
-            List<HrPosition> positionList = companyService.getAllPositionsInOrganization(this.currentAppUser.getCompany(), orgStructure);
+            List<HrPosition> positionList =
+                    companyService.getAllPositionsInOrganization(this.currentAppUser.getCompany(), orgStructure);
             positionGrid.setItems(positionList);
         }
     }
 
     private void populateAvailableAllowanceList(){
-        this.availableAllowanceList = payrollService.getAllSalaryAllowances(withInactivePositionAllowance.getValue());
-
+        this.availableAllowanceList =
+                payrollService.getAllSalaryAllowances(withInactivePositionAllowance.getValue());
         log.debug("Refresh Allowance Map, total: {}", availableAllowanceList.size());
     }
 
     private void populatePositionAllowanceGrid(HrPosition position, HrOrgStructure orgStructure){
         if(position != null && orgStructure != null) {
-            List<HrSalaryPositionAllowance> positionAllowanceList = payrollService.getSalaryPositionAllowancesByPosition(position, withInactivePositionAllowance.getValue());
+            List<HrSalaryPositionAllowance> positionAllowanceList =
+                    payrollService.getSalaryPositionAllowancesByPosition(position, withInactivePositionAllowance.getValue());
             positionAllowanceGrid.setItems(positionAllowanceList);
-
             calculateTotalAllowance();
         } else {
-            positionAllowanceGrid.setItems(); // clear
-            totalallowanceTF.setValue( decimalAmountFormater(BigDecimal.ZERO) );
+            positionAllowanceGrid.setItems();
+            totalallowanceTF.setValue(decimalAmountFormater(BigDecimal.ZERO));
         }
     }
 
     private String decimalAmountFormater(BigDecimal amount){
-        // Formatter for thousand + decimal separator (Indonesian style)
-        DecimalFormatSymbols symbols = new DecimalFormatSymbols(new Locale("id", "ID"));
+        DecimalFormatSymbols symbols = new DecimalFormatSymbols(Locale.of("id", "ID"));
         symbols.setGroupingSeparator('.');
         symbols.setDecimalSeparator(',');
         DecimalFormat decimalFormat = new DecimalFormat("#,###.##", symbols);
-
         return decimalFormat.format(amount);
     }
 
     private void calculateTotalAllowance(){
         BigDecimal total = BigDecimal.ZERO;
 
-        List<HrSalaryPositionAllowance> positionAllowanceList = positionAllowanceGrid.getListDataView().getItems().toList();
+        List<HrSalaryPositionAllowance> positionAllowanceList =
+                positionAllowanceGrid.getListDataView().getItems().toList();
 
         for(HrSalaryPositionAllowance pa : positionAllowanceList){
-            // Calculate only allowance still active/ end date is null
             if  (
-                    (calcullationDateTF.getValue().isAfter(pa.getStartDate()) || calcullationDateTF.getValue().isEqual(pa.getStartDate()) ) &&
+                    (calcullationDateTF.getValue().isAfter(pa.getStartDate())
+                            || calcullationDateTF.getValue().isEqual(pa.getStartDate()))
+                            &&
                             (pa.getEndDate() == null || calcullationDateTF.getValue().isBefore(pa.getEndDate()))
             ) {
                 total = total.add(pa.getAllowance().getAmount());
             }
         }
 
-        totalallowanceTF.setValue( decimalAmountFormater(total) );
+        totalallowanceTF.setValue(decimalAmountFormater(total));
     }
 
+    /* =========================
+       LISTENER
+       ========================= */
+
     private void setListener() {
-        // add button listener
+
+        // ✅ ADD basic salary -> POPUP
         sblAddButton.addClickListener(e -> {
-            HrSalaryBaseLevel newLevel = new HrSalaryBaseLevel();
-            newLevel.setLevelCode("NEW LEVEL CODE");
-            newLevel.setBaseSalary(BigDecimal.ZERO);
-            newLevel.setStartDate(LocalDate.now());
-            salaryBaseLevelGrid.getListDataView().addItem(newLevel);
-            this.isBasicSalaryEdit = true;
+            SalaryBaseLevelDialog dialog = new SalaryBaseLevelDialog(
+                    salaryBaseLevelService,
+                    currentAppUser.getCompany(),
+                    currentAppUser,
+                    null,
+                    () -> populateSalaryBaseLevelGrid(withInactiveBasicSalary.getValue())
+            );
+            dialog.open();
         });
 
-        // save button listener
+        // ✅ Refresh base salary
         sblSaveButton.addClickListener(e -> {
-            if(this.auth.canEdit && this.isBasicSalaryEdit) {
-
-                List<HrSalaryBaseLevel> toSaveList = salaryBaseLevelGrid.getListDataView().getItems().toList();
-
-                for (HrSalaryBaseLevel item : toSaveList) {
-                    payrollService.saveSalaryBaseLevel(item, currentUser.require());
-                }
-                populateSalaryBaseLevelGrid(withInactiveBasicSalary.getValue());
-                this.isBasicSalaryEdit = false;
-
-                // Notification
-                Notification.show("Data saved successfully");
-            }
+            populateSalaryBaseLevelGrid(withInactiveBasicSalary.getValue());
+            Notification.show("Refreshed");
         });
 
         withInactiveBasicSalary.addValueChangeListener(e -> {
             populateSalaryBaseLevelGrid(e.getValue());
         });
 
-        // add button listener
+        // Allowance add
         saAddButton.addClickListener(e -> {
             HrSalaryAllowance newAllowance = new HrSalaryAllowance();
             newAllowance.setName("NEW ALLOWANCE");
@@ -815,19 +683,17 @@ public class KomponenGajiView extends Main {
             this.isAllowanceEdit = true;
         });
 
-        // save button listener
+        // Allowance save
         saSaveButton.addClickListener(e -> {
             if(this.auth.canEdit && this.isAllowanceEdit) {
-
-                List<HrSalaryAllowance> toSaveList = salaryAllowanceGrid.getListDataView().getItems().toList();
+                List<HrSalaryAllowance> toSaveList =
+                        salaryAllowanceGrid.getListDataView().getItems().toList();
 
                 for (HrSalaryAllowance item : toSaveList) {
                     payrollService.saveSalaryAllowance(item, currentUser.require());
                 }
                 populateAllowanceGrid(withInactiveAllowance.getValue());
                 this.isAllowanceEdit = false;
-
-                // Notification
                 Notification.show("Data Allowance Saved Successfully");
             }
         });
@@ -840,64 +706,52 @@ public class KomponenGajiView extends Main {
             positionAllowanceGrid.setItems(Collections.emptyList());
             calculateTotalAllowance();
 
-            e.getFirstSelectedItem().ifPresent( item -> {
+            e.getFirstSelectedItem().ifPresent(item -> {
                 positionTF.clear();
                 positionGrid.deselectAll();
-                e.getFirstSelectedItem().ifPresent(this::populatePositionGrid);
+                populatePositionGrid(item);
                 organizationTF.setValue(item.getName());
             });
         });
 
         positionGrid.addSelectionListener(e -> {
             e.getFirstSelectedItem().ifPresentOrElse(item -> {
-                // ✅ If item selected
                 positionTF.setValue(item.getName());
                 populatePositionAllowanceGrid(
-                        e.getFirstSelectedItem().get(),
+                        item,
                         orgStructureGrid.getSelectedItems().iterator().next()
                 );
             }, () -> {
-                // ❌ Else (no item selected)
                 positionTF.clear();
-                // Optionally clear or reset your allowance grid
                 positionAllowanceGrid.setItems(Collections.emptyList());
                 calculateTotalAllowance();
             });
         });
 
-
-        paAddButton.addClickListener( e -> {
+        paAddButton.addClickListener(e -> {
             if(this.auth.canCreate) {
                 Dialog dialog = new Dialog();
                 dialog.setWidth("500px");
 
-                // Data Allowance
                 ComboBox<HrSalaryAllowance> allowanceCB = new ComboBox<>("Allowance");
                 allowanceCB.setWidthFull();
                 allowanceCB.setItems(this.availableAllowanceList);
                 allowanceCB.setItemLabelGenerator(HrSalaryAllowance::getName);
-                // Renderer for dropdown
+
                 allowanceCB.setRenderer(new ComponentRenderer<>(allowance -> {
                     HorizontalLayout row = new HorizontalLayout();
                     row.setWidthFull();
                     row.setJustifyContentMode(FlexComponent.JustifyContentMode.BETWEEN);
 
-                    // Left side: name
                     Span name = new Span(allowance.getName());
-
-                    // Right side: amount formatted
-                    NumberFormat formatter = NumberFormat.getNumberInstance(new Locale("id", "ID")); // Indonesian format
-                    String formatted = "Rp " + formatter.format(allowance.getAmount());
-
-                    Span amount = new Span(formatted);
-                    amount.getStyle().set("color", "gray"); // make it gray
+                    NumberFormat formatter = NumberFormat.getNumberInstance(Locale.of("id", "ID"));
+                    Span amount = new Span("Rp " + formatter.format(allowance.getAmount()));
+                    amount.getStyle().set("color", "gray");
 
                     row.add(name, amount);
                     return row;
                 }));
 
-
-                HorizontalLayout buttonLayout = new HorizontalLayout();
                 Button cancelButton = new Button("Cancel", event -> dialog.close());
                 Button addButton = new Button("Add");
 
@@ -906,10 +760,10 @@ public class KomponenGajiView extends Main {
                 }
 
                 addButton.addClickListener(event -> {
-                    // get Selected allowanceCB and add to positionAllowanceGrid
                     HrSalaryAllowance selectedAllowance = allowanceCB.getValue();
                     if (selectedAllowance != null && !positionTF.getValue().equals("") &&
-                            positionGrid.getSelectedItems().size() >= 1 && orgStructureGrid.getSelectedItems().size() >= 1) {
+                            positionGrid.getSelectedItems().size() >= 1 &&
+                            orgStructureGrid.getSelectedItems().size() >= 1) {
 
                         HrPosition selectedPosition = positionGrid.getSelectedItems().iterator().next();
                         HrOrgStructure selectedOrg = orgStructureGrid.getSelectedItems().iterator().next();
@@ -922,51 +776,44 @@ public class KomponenGajiView extends Main {
                         newPA.setStartDate(LocalDate.now());
 
                         positionAllowanceGrid.getListDataView().addItem(newPA);
-
                         isPositionallowanceEdit = true;
-
-                        log.debug("Add allowance {} to position {}", selectedAllowance.getName(), selectedPosition.getName());
                     } else {
                         Notification.show("Please select an allowance and position");
                     }
 
                     calculateTotalAllowance();
-
                     dialog.close();
                 });
 
-                cancelButton.addClickListener( event -> dialog.close());
-
-                buttonLayout.add(cancelButton, addButton);
-                // button layout full width and justify content to end
+                HorizontalLayout buttonLayout = new HorizontalLayout(cancelButton, addButton);
                 buttonLayout.setWidthFull();
                 buttonLayout.setJustifyContentMode(FlexComponent.JustifyContentMode.END);
 
                 dialog.add(allowanceCB, buttonLayout);
-
                 dialog.open();
             }
         });
 
-        paSaveButton.addClickListener( e -> {
+        paSaveButton.addClickListener(e -> {
             if(this.auth.canEdit && this.isPositionallowanceEdit) {
-
-                List<HrSalaryPositionAllowance> toSaveList = positionAllowanceGrid.getListDataView().getItems().toList();
+                List<HrSalaryPositionAllowance> toSaveList =
+                        positionAllowanceGrid.getListDataView().getItems().toList();
 
                 for (HrSalaryPositionAllowance item : toSaveList) {
                     payrollService.saveSalaryPositionAllowance(item, currentUser.require());
                 }
 
-                populatePositionAllowanceGrid(positionGrid.getSelectedItems().iterator().next(), orgStructureGrid.getSelectedItems().iterator().next());
+                populatePositionAllowanceGrid(
+                        positionGrid.getSelectedItems().iterator().next(),
+                        orgStructureGrid.getSelectedItems().iterator().next()
+                );
 
                 this.isPositionallowanceEdit = false;
-
-                // Notification
                 Notification.show("Data Position Allowance Saved Successfully");
             }
         });
 
-        tabsheet.addSelectedChangeListener( event -> {
+        tabsheet.addSelectedChangeListener(event -> {
             Tab selectedTab = event.getSelectedTab();
             log.debug("Select tab {} on tabsheet", selectedTab.getLabel());
             if (selectedTab.getLabel().equals("Allowance Packages")) {
@@ -974,14 +821,16 @@ public class KomponenGajiView extends Main {
             }
         });
 
-        withInactivePositionAllowance.addValueChangeListener( e-> {
-            if(positionGrid.getSelectedItems().iterator().hasNext() && orgStructureGrid.getSelectedItems().iterator().hasNext())
-                populatePositionAllowanceGrid(positionGrid.getSelectedItems().iterator().next(), orgStructureGrid.getSelectedItems().iterator().next());
+        withInactivePositionAllowance.addValueChangeListener(e -> {
+            if(positionGrid.getSelectedItems().iterator().hasNext()
+                    && orgStructureGrid.getSelectedItems().iterator().hasNext()) {
+                populatePositionAllowanceGrid(
+                        positionGrid.getSelectedItems().iterator().next(),
+                        orgStructureGrid.getSelectedItems().iterator().next()
+                );
+            }
         });
 
-        calcullationDateTF.addValueChangeListener( e-> {
-            calculateTotalAllowance();
-        });
+        calcullationDateTF.addValueChangeListener(e -> calculateTotalAllowance());
     }
 }
-
